# solana-basic

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
client/: main.ts  plus.ts  utils.ts
src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
