[package]
name = "basic_calculator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.6"
thiserror = "1.0.30"
borsh = "0.9.0"
arrayref = "0.3.6"
byteorder = "1.4.3"
half = "1.8.2"

[features]
no-entrypoint = []

[lib]
name = "basic_calculator"
crate-type = ["cdylib"]